--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,6 +3,7 @@ name = "aquestalk-proxy"
 version = "0.1.0"
 authors = ["Na-x4 <Na-x4@outlook.com>"]
 edition = "2018"
+license = " AGPL-3.0-or-later"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
