--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ base64 = "0.13"
 encoding_rs = "0.8"
 getopts = "0.2.21"
 libloading = "0.7"
+optional_take = "0.1.0"
 serde = { version = "1.0", features = ["derive"] }
 serde_json = "1.0"
 threadpool = "1.8"
