--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,7 +18,7 @@ jobs:
 
     steps:
       - uses: actions/checkout@v2
-      - run: ./extract-aqtk.sh
+      - run: ./scripts/extract-aqtk.sh
 
       - uses: actions-rs/toolchain@v1
         with:
