--- a/lib/Cargo.toml
+++ b/lib/Cargo.toml
@@ -3,6 +3,7 @@ name = "aquestalk-proxy"
 version = "0.1.0"
 edition = "2021"
 authors = ["Na-x4 <Na-x4@outlook.com>"]
+license = "MIT OR Apache-2.0"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
