GitHub Actions のバージョン取得処理に不具合があったので修正
- クレートを分けたことにより、GITHUB_OUTPUT への出力が2回発生して lib 側のバージョンで上書きされていた
- すでに同じバージョンでリリースされている場合エラーが出るようにした

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,9 +48,7 @@ jobs:
 
       - name: Get version
         id: version
-        run: |
-          cargo --color=always metadata --format-version=1 --no-deps \
-          | jq -r '"CARGO_PKG_VERSION=" + .packages[].version' >> $GITHUB_OUTPUT
+        run: echo "CARGO_PKG_VERSION=$(./scripts/print-version.sh)" >> $GITHUB_OUTPUT
       - name: Package
         run: |
           mkdir release && cd release \
@@ -59,6 +57,10 @@ jobs:
           && cp ../README.md ./ \
           && cp ../COPYING ./ \
           && zip -r ../aquestalk-proxy_v${{ steps.version.outputs.CARGO_PKG_VERSION }}.zip *
+      - name: Verify Release Non-Existence
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        run: '! gh release view "v${{ steps.version.outputs.CARGO_PKG_VERSION }}" --repo "${{ github.repository }}"'
       - name: Release
         uses: softprops/action-gh-release@v2
         with:
